# SE-ML-API

./: README.md  main.py  ml.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_main.py  test_process.py
