[project]
name = "toxicity-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.1",
    "pytest-async>=0.1.1",
    "pytest-mock>=3.15.1",
]
